[level 1] Title: 같은 숫자는 싫어, Time: 39.21 ms, Memory: 111 MB -BaekjoonHub